Implemented CRUD APIs, JUnit tests and exception handling